--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,41 @@
     box-sizing: border-box;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera by default */
+*::-webkit-scrollbar {
+    width: 8px; /* Customize width */
+    background: transparent; /* Make track transparent */
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Hidden by default */
+    border-radius: 10px; /* Rounded corners */
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  /* Show scrollbar thumb on hover */
+  *:hover::-webkit-scrollbar-thumb {
+    background-color: #0C3C78; /* Show scrollbar thumb on hover */
+  }
+  
+  /* Show scrollbar thumb when scrolling */
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #0C3C78; /* Color during scroll */
+  }
+  
+  /* Firefox */
+  * {
+    scrollbar-width: thin; /* Thin scrollbar */
+    scrollbar-color: transparent transparent; /* Hidden by default */
+    transition: scrollbar-color 0.3s ease-in-out;
+  }
+  
+  /* Show scrollbar on hover for Firefox */
+  *:hover {
+    scrollbar-color: #0C3C78 transparent; /* Show scrollbar thumb */
+  }
+  
+
 ::-moz-selection { /* Code for Firefox */
     color: #fff;
     background: #DA1212;
@@ -155,11 +190,39 @@ a {
     color: black;
 }
 
+header {
+    background-color: #151515;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+  }
+
+  header div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  header h1, header a {
+    color: #fff;
+    font-family: "Carlito", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+    margin-right: 20px;
+  }
+
+  header img {
+    width: 15px;
+    margin-right: 10px;
+  }
+
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 0;
+    padding: 10px 0;
 }
 
 nav img {
@@ -188,18 +251,83 @@ nav ul li a:hover {
     color: #F33535;
 }
 
-#hero {
+/* __________________________________ HERO SECTION STYLING __________________________________ */
+
+#hero .my-swiper-container {
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  #hero .swiper-slide {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    background-image: url("https://placehold.co/1300x400");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 400px;
-}
+    font-size: 24px;
+  }
 
+  #hero .hero_text_content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 50%;
+  }
+
+  #hero .swiper-slide img {
+    width: 100%;
+    height: auto;
+  }
+  
+  #hero .my-swiper-button-next, .my-swiper-button-prev {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 10px;
+  }
+  
+  #hero .my-swiper-button-next {
+    right: 10px;
+  }
+  
+  #hero .my-swiper-button-prev {
+    left: 10px;
+  }
+
+  .hero_one h4 {
+    font-family: "Livvic", sans-serif;
+    font-weight: 900;
+    font-size: 2rem;
+    color: #000;
+    text-transform: uppercase;
+  }
+
+  .hero_one h5 {
+    font-family: "Livvic", sans-serif;
+    font-weight: 900;
+    font-size: 3.5rem;
+    color: #fff;
+    text-transform: uppercase;
+  }
+
+  /* .hero_one_images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap
+  }
+
+  #hero .swiper-slide .hero_one_images .small_hero {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin-right: 15px;
+  } */
+  
 
 /*____________________________________ products section styling ________________________ */
 
@@ -216,7 +344,7 @@ nav ul li a:hover {
     text-decoration: underline;
     text-decoration-thickness: 5.5px;
     text-decoration-color: #F33535;
-    text-underline-offset: 8px;
+    text-underline-offset: 12px;
 }
 
 .products_container {
@@ -224,37 +352,50 @@ nav ul li a:hover {
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
+    padding: 0 150px;
 }
 
 .product_card {
     margin-right: 50px;
     margin-bottom: 50px;
-    width: 200px;
-    border: 1px solid #151515;
+    width: 250px;
+    background-color: #0C3C78;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 .product_card h5 {
     text-align: center;
     width: 100%;
     overflow: wrap;
-    padding: 15px;
+    padding: 8px 5px 13px 5px;
     text-transform: uppercase;
-    border: 1px solid #151515;
-    /* font-size: 1.1rem; */
     transition: 0.3s;
-    cursor: pointer;
+    color: #fff;
+    position: relative;
+    z-index: 20;
+    background-color: #0C3C78;
+    font-size: 1.1rem;
     font-weight: 700;
 }
 
-.product_card h5:hover {
+.product_card:hover {
+    background-color: #151515;
+    color: #fff;
+}
+
+.product_card:hover h5 {
     background-color: #151515;
     color: #fff;
 }
 
 .product_card img {
     width: 100%;
-    /* height: 200px;
-    object-fit: cover; */
+    transition: 0.3s;
+}
+
+.product_card:hover img {
+    transform: scale(1.17);
 }
 
 
@@ -348,6 +489,7 @@ nav ul li a:hover {
     justify-content: center;
     width: 100%;
     background-color: #151515;
+    padding: 50px 0 50px 0;
   
 }
 
@@ -356,37 +498,37 @@ nav ul li a:hover {
     font-weight: 700;
     color: #fff;
     font-size: 2rem;
-    margin: 10px 0 20px 0;
+    margin: 0px 0 40px 0;
     text-transform: uppercase;
     text-decoration: underline;
     text-decoration-thickness: 5.5px;
     text-decoration-color: #0C3C78;
-    text-underline-offset: 8px;
+    text-underline-offset: 12px;
 }
 
-.swiper-thumb .swiper-slide-thumb-active img {
+#industries .swiper-thumb .swiper-slide-thumb-active img {
     border-color: #000;
 }
 
-.main-slider {
+#industries .main-slider {
     margin-top: 50px;
 }
 
 
-.carousel-container {
-    max-width: 1200px;
+#industries .carousel-container {
+    max-width: 1000px;
     position: relative;
     padding: 20px;
 }
 
 /* Swiper Slide Style */
-.swiper-slide {
+#industries .swiper-slide {
     display: flex;
     align-items: flex-start;
 }
 
 
-.thumb-slider .swiper-slide {
+#industries .thumb-slider .swiper-slide {
     width: 140px;
     flex-direction: column;
     text-align: center;
@@ -394,13 +536,13 @@ nav ul li a:hover {
     text-align: center;
 }
 
-.slide-content {
+#industries .slide-content {
     flex: 1;
     color: #fff;
     margin-left: 40px;
 }
 
-.slide-content h2 {
+#industries .slide-content h2 {
     font-size: 2em;
     margin-bottom: 10px;
     font-family: "Livvic", sans-serif;
@@ -408,45 +550,45 @@ nav ul li a:hover {
     text-transform: uppercase;
 }
 
-.slide-content p {
+#industries .slide-content p {
     font-size: 1.1em;
     margin-bottom: 20px;
 }
 
-.slide-content img {
+#industries .slide-content img {
     width: 100px;
     height: 100px;
     object-fit: cover;
 }
 
-.slide-content-flex-img {
+#industries .slide-content-flex-img {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-wrap: wrap;
 }
 
-.slide_prod_img {
+#industries .slide_prod_img {
     margin-right: 5px;
     text-align: center;
 }
 
-.slide-image {
+#industries .slide-image {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.slide-image img {
+#industries .slide-image img {
     width: 562px;
     height: 400px;
     object-fit: cover;
 }
 
 /* Navigation Buttons */
-.swiper-button-next,
-.swiper-button-prev {
+#industries .swiper-button-next,
+#industries .swiper-button-prev {
     background-color: #0C3C78;
     color: #fff;
     border-radius: 50%;
@@ -460,14 +602,14 @@ nav ul li a:hover {
 }
 
 /* Slide Selector (thumbnails) */
-.swiper-thumb {
+#industries .swiper-thumb {
     /* margin-bottom: 20px; */
     font-family: "Carlito", sans-serif;
     font-weight: 700;
     color: #fff;
 }
 
-.swiper-thumb img {
+#industries .swiper-thumb img {
     width: 100%;
     height: auto;
     margin-right: 10px;
@@ -476,7 +618,7 @@ nav ul li a:hover {
     object-fit: cover;
 }
 
-.thumb-slider .swiper-slide h5 {
+#industries .thumb-slider .swiper-slide h5 {
     position: absolute;
     width: 90%;
     top: 50%;
@@ -487,21 +629,41 @@ nav ul li a:hover {
     font-weight: 700;
 }
 
-.swiper-thumb img.swiper-slide-thumb-active {
+#industries .swiper-thumb img.swiper-slide-thumb-active {
     border-color: #000;
 }
 
 /* _________________________ CONTACT section styling _________________________ */
 
 #contact {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    background-color: #0C3C78;
+    color: #fff;
+}
+
+#contact a {
+    color: #fff;
+}
+
+#contact p {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
+}
+
+#contact img {
+    width: 20px;
+    margin-right: 10px;
+}
+
+.sf-cont-bottom {
+    margin-bottom: 30px;
 }
 
 #contact h5 {
-    width: 30%;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-family: "Livvic", sans-serif;
     font-weight: 900;
     text-align: center;
@@ -509,24 +671,26 @@ nav ul li a:hover {
     text-decoration: underline;
     text-decoration-thickness: 5.5px;
     text-decoration-color: #F33535;
-    text-underline-offset: 8px;
+    text-underline-offset: 12px;
 }
 
 #contact div {
-    border-left: 3px solid black;
-    width: 70%;
     padding: 50px 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 #contact h4 {
-    color: #0C3C78;
     font-family: "Livvic", sans-serif;
     text-transform: uppercase;
     font-size: 1.5rem;
+    margin-top: 55px;
 }
 
 iframe {
-    margin-top: 50px;
+    height: 500px;
 }
 
 /* _________________________________ Quote section ______________________________________ */
@@ -535,7 +699,7 @@ iframe {
     text-transform: uppercase;
     font-family: "Livvic", sans-serif;
     font-weight: 900;
-    font-size: 3.5rem;
+    font-size: 3.02rem;
     color: #0C3C78;
     display: flex;
     justify-content: center;
@@ -545,4 +709,136 @@ iframe {
 
 #quote span {
     color: #000;
+}
+
+/* _________________________________ Footer section ______________________________________ */
+
+footer {
+    background-color: #151515;
+    color: #fff;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding: 50px;
+    font-family: "Carlito", sans-serif;
+}
+
+footer div {
+    margin-right: 50px;
+    max-width: 300px;
+}
+
+
+footer div:first-of-type img {
+    height: 120px;
+}
+
+footer #logoDiv {
+    width: 400px;
+    max-width: none;
+}
+
+footer div:first-of-type p {
+    margin-top: 10px;
+    font-size: 1rem;
+    /* letter-spacing: 2px; */
+}
+
+footer h4 {
+    font-size: 1.3rem;
+    font-family: "Livvic", sans-serif;
+    font-weight: 700px;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-thickness: 3.5px;
+    text-decoration-color: #0C3C78;
+    text-underline-offset: 6px;
+    margin-bottom: 30px;
+    margin-top: 130px;
+}
+
+footer li {
+    margin-top: 10px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+footer li:hover {
+    color: #0C3C78;
+}
+
+footer div:last-of-type img {
+    width: 20px;
+    margin-right: 10px;
+}
+
+footer div:last-of-type p {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    flex-wrap: wrap;
+}
+
+footer a {
+    color: #fff;
+}
+
+footer ul {
+    list-style-type: none;
+}
+
+#Copyright {
+    color: #fff;
+    background-color: #151515;
+    border-top: 2px #fff solid;
+    padding: 10px 20px;
+    text-align: center;
+}
+
+@media screen and (max-width: 1115px) {
+    #industries .carousel-container {
+        max-width: 500px;
+    }
+
+    #industries .swiper-slide {
+       flex-wrap: wrap;
+    }
+
+    #industries .slide-content {
+        margin-left: 0px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    header h1, header a {
+        font-size: 0.7rem;
+    }
+
+      .products_container {
+        padding: 0 50px;
+      }
+
+      #contact {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    /* header {
+        flex-wrap: wrap;
+        justify-content: center;
+      } */
+
+}
+
+@media screen and (max-width: 680px) {
+        header {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      header div {
+        margin-bottom: 15px;
+      }
 }
