--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera by default */
@@ -222,11 +223,12 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0;
+    padding: 20px 0;
 }
 
 nav img {
-    width: 150px;
+    width: 110px;
+    margin-left: 50px;
 }
 
 nav ul {
@@ -267,35 +269,22 @@ nav ul li a:hover {
 
   #hero .hero_text_content {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
   }
 
-  #hero .swiper-slide img {
+  /* #hero .swiper-slide img {
     width: 100%;
-    height: auto;
-  }
-  
-  #hero .my-swiper-button-next, .my-swiper-button-prev {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10;
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 10px;
-  }
-  
-  #hero .my-swiper-button-next {
-    right: 10px;
-  }
-  
-  #hero .my-swiper-button-prev {
-    left: 10px;
+    height: 600px;
+    object-fit: cover;
+    object-position: top;
+  } */
+
+  #hero .swiper-slide video {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+    object-position: top;
   }
 
   .hero_one h4 {
@@ -314,19 +303,128 @@ nav ul li a:hover {
     text-transform: uppercase;
   }
 
-  /* .hero_one_images {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap
+  #heroSquareOne {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
   }
 
-  #hero .swiper-slide .hero_one_images .small_hero {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin-right: 15px;
-  } */
+  #heroSquareTwo {
+    position: absolute;
+    right: 0;
+    bottom: 30px;
+    height: 80%;
+  }
+
+  #heroSquareOne img {
+    height: 100%;
+    opacity: 0.9;
+  }
+
+  #heroTextOne {
+    position: absolute;
+    left: 50px;
+    top: 85px;
+    font-family: "Livvic", sans-serif;
+    max-width: 80%;
+  }
+
+  #heroTextOne h2 {
+    font-family: "Carlito", sans-serif;
+    text-transform: uppercase;
+    color: #0C3C78;
+    font-weight: 700;
+    font-size: 2rem;
+  }
+
+  #heroTextOne h2 span {
+    color: #F33535;
+  }
+
+  #heroTextOne h4 {
+    font-weight: 900;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+  }
+
+  #heroTextOne p {
+    font-family: "Carlito", sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    margin-top: 10px;
+  }
+
+  #heroTextOne button {
+    background-color: #0C3C78;
+    border: none;
+    color: #fff;
+    font-weight: 900;
+    padding: 10px 50px;
+    text-transform: uppercase;
+    border-radius: 3px;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+
+  #heroTextOne button:hover {
+    background-color: #151515;
+  }
+
+  .heroTwoBack {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 700px;
+    text-align: center;
+  }
+
+  .heroTwoBack img {
+    width: 100%;
+  }
+
+  .heroTwoBack .heroTwoText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
+  }
+
+  .heroTwoBack .heroTwoText h4 {
+    font-family: "Livvic", sans-serif;
+    font-weight: 900;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+  }
+
+  .heroTwoBack .heroTwoText p {
+    font-family: "Carlito", sans-serif;
+    font-size: 1rem;
+    margin-top: 10px;
+    padding: 0 20px;
+  }
+
+  .heroTwoBack .heroTwoText button {
+    background-color: #0C3C78;
+    border: none;
+    color: #fff;
+    font-weight: 900;
+    padding: 10px 50px;
+    text-transform: uppercase;
+    border-radius: 3px;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+
+  
+  .heroTwoBack .heroTwoText button:hover {
+    background-color: #151515;
+  }
   
 
 /*____________________________________ products section styling ________________________ */
@@ -516,7 +614,7 @@ nav ul li a:hover {
 
 
 #industries .carousel-container {
-    max-width: 1000px;
+    max-width: 1100px;
     position: relative;
     padding: 20px;
 }
@@ -666,12 +764,17 @@ nav ul li a:hover {
     font-size: 1.5rem;
     font-family: "Livvic", sans-serif;
     font-weight: 900;
-    text-align: center;
+    line-height: 50px;
+}
+
+#contact h5 span {
+    font-size: 2rem;
     text-transform: uppercase;
     text-decoration: underline;
     text-decoration-thickness: 5.5px;
     text-decoration-color: #F33535;
     text-underline-offset: 12px;
+    line-height: 25px;
 }
 
 #contact div {
