--- a/public/styles.css
+++ b/public/styles.css
@@ -7,48 +7,58 @@
 
 /* Hide scrollbar for Chrome, Safari and Opera by default */
 *::-webkit-scrollbar {
-    width: 8px; /* Customize width */
-    background: transparent; /* Make track transparent */
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    background-color: transparent; /* Hidden by default */
-    border-radius: 10px; /* Rounded corners */
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  /* Show scrollbar thumb on hover */
-  *:hover::-webkit-scrollbar-thumb {
-    background-color: #0C3C78; /* Show scrollbar thumb on hover */
-  }
-  
-  /* Show scrollbar thumb when scrolling */
-  *::-webkit-scrollbar-thumb:active {
-    background-color: #0C3C78; /* Color during scroll */
-  }
-  
-  /* Firefox */
-  * {
-    scrollbar-width: thin; /* Thin scrollbar */
-    scrollbar-color: transparent transparent; /* Hidden by default */
-    transition: scrollbar-color 0.3s ease-in-out;
-  }
-  
-  /* Show scrollbar on hover for Firefox */
-  *:hover {
-    scrollbar-color: #0C3C78 transparent; /* Show scrollbar thumb */
-  }
-  
+    width: 8px;
+    /* Customize width */
+    background: transparent;
+    /* Make track transparent */
+}
 
-::-moz-selection { /* Code for Firefox */
+*::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    /* Hidden by default */
+    border-radius: 10px;
+    /* Rounded corners */
+    transition: background-color 0.3s ease-in-out;
+}
+
+/* Show scrollbar thumb on hover */
+*:hover::-webkit-scrollbar-thumb {
+    background-color: #0C3C78;
+    /* Show scrollbar thumb on hover */
+}
+
+/* Show scrollbar thumb when scrolling */
+*::-webkit-scrollbar-thumb:active {
+    background-color: #0C3C78;
+    /* Color during scroll */
+}
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    /* Thin scrollbar */
+    scrollbar-color: transparent transparent;
+    /* Hidden by default */
+    transition: scrollbar-color 0.3s ease-in-out;
+}
+
+/* Show scrollbar on hover for Firefox */
+*:hover {
+    scrollbar-color: #0C3C78 transparent;
+    /* Show scrollbar thumb */
+}
+
+
+::-moz-selection {
+    /* Code for Firefox */
     color: #fff;
     background: #DA1212;
-  }
-  
-  ::selection {
+}
+
+::selection {
     color: #fff;
     background: #DA1212;
-  }
+}
 
 #content {
     display: none;
@@ -62,121 +72,121 @@
     font-family: "Carlito", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
-  .carlito-bold {
-    font-family: "Carlito", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .carlito-regular-italic {
-    font-family: "Carlito", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .carlito-bold-italic {
-    font-family: "Carlito", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
+}
 
-  .livvic-thin {
+.carlito-bold {
+    font-family: "Carlito", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.carlito-regular-italic {
+    font-family: "Carlito", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.carlito-bold-italic {
+    font-family: "Carlito", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+}
+
+.livvic-thin {
     font-family: "Livvic", sans-serif;
     font-weight: 100;
     font-style: normal;
-  }
-  
-  .livvic-extralight {
+}
+
+.livvic-extralight {
     font-family: "Livvic", sans-serif;
     font-weight: 200;
     font-style: normal;
-  }
-  
-  .livvic-light {
+}
+
+.livvic-light {
     font-family: "Livvic", sans-serif;
     font-weight: 300;
     font-style: normal;
-  }
-  
-  .livvic-regular {
+}
+
+.livvic-regular {
     font-family: "Livvic", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
-  .livvic-medium {
+}
+
+.livvic-medium {
     font-family: "Livvic", sans-serif;
     font-weight: 500;
     font-style: normal;
-  }
-  
-  .livvic-semibold {
+}
+
+.livvic-semibold {
     font-family: "Livvic", sans-serif;
     font-weight: 600;
     font-style: normal;
-  }
-  
-  .livvic-bold {
+}
+
+.livvic-bold {
     font-family: "Livvic", sans-serif;
     font-weight: 700;
     font-style: normal;
-  }
-  
-  .livvic-black {
+}
+
+.livvic-black {
     font-family: "Livvic", sans-serif;
     font-weight: 900;
     font-style: normal;
-  }
-  
-  .livvic-thin-italic {
+}
+
+.livvic-thin-italic {
     font-family: "Livvic", sans-serif;
     font-weight: 100;
     font-style: italic;
-  }
-  
-  .livvic-extralight-italic {
+}
+
+.livvic-extralight-italic {
     font-family: "Livvic", sans-serif;
     font-weight: 200;
     font-style: italic;
-  }
-  
-  .livvic-light-italic {
+}
+
+.livvic-light-italic {
     font-family: "Livvic", sans-serif;
     font-weight: 300;
     font-style: italic;
-  }
-  
-  .livvic-regular-italic {
+}
+
+.livvic-regular-italic {
     font-family: "Livvic", sans-serif;
     font-weight: 400;
     font-style: italic;
-  }
-  
-  .livvic-medium-italic {
+}
+
+.livvic-medium-italic {
     font-family: "Livvic", sans-serif;
     font-weight: 500;
     font-style: italic;
-  }
-  
-  .livvic-semibold-italic {
+}
+
+.livvic-semibold-italic {
     font-family: "Livvic", sans-serif;
     font-weight: 600;
     font-style: italic;
-  }
-  
-  .livvic-bold-italic {
+}
+
+.livvic-bold-italic {
     font-family: "Livvic", sans-serif;
     font-weight: 700;
     font-style: italic;
-  }
-  
-  .livvic-black-italic {
+}
+
+.livvic-black-italic {
     font-family: "Livvic", sans-serif;
     font-weight: 900;
     font-style: italic;
-  }
+}
 
 body {
     display: flex;
@@ -184,6 +194,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     font-family: "Carlito", sans-serif;
+    overflow-x: hidden;
 }
 
 a {
@@ -197,27 +208,28 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
-  }
+}
 
-  header div {
+header div {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 
-  header h1, header a {
+header h1,
+header a {
     color: #fff;
     font-family: "Carlito", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 1rem;
     margin-right: 20px;
-  }
+}
 
-  header img {
+header img {
     width: 15px;
     margin-right: 10px;
-  }
+}
 
 nav {
     display: flex;
@@ -229,6 +241,10 @@ nav {
 nav img {
     width: 110px;
     margin-left: 50px;
+}
+
+nav .burger {
+    display: none;
 }
 
 nav ul {
@@ -258,104 +274,104 @@ nav ul li a:hover {
 #hero .my-swiper-container {
     width: 100%;
     overflow: hidden;
-  }
-  
-  #hero .swiper-slide {
+}
+
+#hero .swiper-slide {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 24px;
-  }
+}
 
-  #hero .hero_text_content {
+#hero .hero_text_content {
     position: absolute;
     width: 100%;
     height: 100%;
-  }
+}
 
-  /* #hero .swiper-slide img {
+/* #hero .swiper-slide img {
     width: 100%;
     height: 600px;
     object-fit: cover;
     object-position: top;
   } */
 
-  #hero .swiper-slide video {
+#hero .swiper-slide video {
     width: 100%;
     height: 600px;
     object-fit: cover;
     object-position: top;
-  }
+}
 
-  .hero_one h4 {
+.hero_one h4 {
     font-family: "Livvic", sans-serif;
     font-weight: 900;
     font-size: 2rem;
     color: #000;
     text-transform: uppercase;
-  }
+}
 
-  .hero_one h5 {
+.hero_one h5 {
     font-family: "Livvic", sans-serif;
     font-weight: 900;
     font-size: 3.5rem;
     color: #fff;
     text-transform: uppercase;
-  }
+}
 
-  #heroSquareOne {
+#heroSquareOne {
     position: absolute;
     left: 0;
     top: 0;
     height: 100%;
-  }
+}
 
-  #heroSquareTwo {
+#heroSquareTwo {
     position: absolute;
     right: 0;
     bottom: 30px;
     height: 80%;
-  }
+}
 
-  #heroSquareOne img {
+#heroSquareOne img {
     height: 100%;
     opacity: 0.9;
-  }
+}
 
-  #heroTextOne {
+#heroTextOne {
     position: absolute;
     left: 50px;
     top: 85px;
     font-family: "Livvic", sans-serif;
     max-width: 80%;
-  }
+}
 
-  #heroTextOne h2 {
+#heroTextOne h2 {
     font-family: "Carlito", sans-serif;
     text-transform: uppercase;
     color: #0C3C78;
     font-weight: 700;
     font-size: 2rem;
-  }
+}
 
-  #heroTextOne h2 span {
+#heroTextOne h2 span {
     color: #F33535;
-  }
+}
 
-  #heroTextOne h4 {
+#heroTextOne h4 {
     font-weight: 900;
     font-size: 3.5rem;
     text-transform: uppercase;
-  }
+}
 
-  #heroTextOne p {
+#heroTextOne p {
     font-family: "Carlito", sans-serif;
     font-size: 1rem;
     width: 80%;
     margin-top: 10px;
-  }
+}
 
-  #heroTextOne button {
+#heroTextOne button {
     background-color: #0C3C78;
     border: none;
     color: #fff;
@@ -366,49 +382,49 @@ nav ul li a:hover {
     margin-top: 20px;
     cursor: pointer;
     transition: 0.2s;
-  }
+}
 
-  #heroTextOne button:hover {
+#heroTextOne button:hover {
     background-color: #151515;
-  }
+}
 
-  .heroTwoBack {
+.heroTwoBack {
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 700px;
     text-align: center;
-  }
+}
 
-  .heroTwoBack img {
+.heroTwoBack img {
     width: 100%;
-  }
+}
 
-  .heroTwoBack .heroTwoText {
+.heroTwoBack .heroTwoText {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
     text-align: center;
-  }
+}
 
-  .heroTwoBack .heroTwoText h4 {
+.heroTwoBack .heroTwoText h4 {
     font-family: "Livvic", sans-serif;
     font-weight: 900;
     font-size: 3.5rem;
     text-transform: uppercase;
-  }
+}
 
-  .heroTwoBack .heroTwoText p {
+.heroTwoBack .heroTwoText p {
     font-family: "Carlito", sans-serif;
     font-size: 1rem;
     margin-top: 10px;
     padding: 0 20px;
-  }
+}
 
-  .heroTwoBack .heroTwoText button {
+.heroTwoBack .heroTwoText button {
     background-color: #0C3C78;
     border: none;
     color: #fff;
@@ -419,13 +435,13 @@ nav ul li a:hover {
     margin-top: 20px;
     cursor: pointer;
     transition: 0.2s;
-  }
+}
 
-  
-  .heroTwoBack .heroTwoText button:hover {
+
+.heroTwoBack .heroTwoText button:hover {
     background-color: #151515;
-  }
-  
+}
+
 
 /*____________________________________ products section styling ________________________ */
 
@@ -588,7 +604,7 @@ nav ul li a:hover {
     width: 100%;
     background-color: #151515;
     padding: 50px 0 50px 0;
-  
+
 }
 
 #industries h3 {
@@ -923,8 +939,29 @@ footer ul {
         max-width: 500px;
     }
 
+    .swiper,
+    #industries .slide-content h2 {
+        margin-top: 30px;
+    }
+
+    footer h4,
+    #industries h3 {
+        line-height: 50px;
+        margin-bottom: 0;
+    }
+
+    #industries .slide-image img {
+        width: 462px;
+        height: 350px;
+    }
+
+    #industries .slide-content-flex-img {
+        justify-content: center;
+        align-items: center;
+    }
+
     #industries .swiper-slide {
-       flex-wrap: wrap;
+        flex-wrap: wrap;
     }
 
     #industries .slide-content {
@@ -933,15 +970,17 @@ footer ul {
 }
 
 @media screen and (max-width: 900px) {
-    header h1, header a {
+
+    header h1,
+    header a {
         font-size: 0.7rem;
     }
 
-      .products_container {
+    .products_container {
         padding: 0 50px;
-      }
+    }
 
-      #contact {
+    #contact {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2, 1fr);
     }
@@ -953,12 +992,190 @@ footer ul {
 }
 
 @media screen and (max-width: 680px) {
-        header {
+
+    nav {
+        position: relative;
+        z-index: 20;
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #fff;
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 280px;
+        transform: translateX(100%);
+        transition: transform 0.3s ease;
+    }
+
+    nav ul li {
+        margin: 0;
+        margin-bottom: 40px;
+    }
+
+    nav .burger {
+        display: block;
+        margin-right: 50px;
+        z-index: 25;
+    }
+
+    #heroSquareTwo {
+        display: none;
+    }
+
+    header {
         flex-wrap: wrap;
         justify-content: center;
-      }
+    }
 
-      header div {
+    header div {
         margin-bottom: 15px;
-      }
+    }
+
+    .heroTwoBack {
+        width: 100%;
+    }
+
+    .heroTwoBack img {
+        height: 400px;
+    }
+
+    .heroTwoBack .heroTwoText h4 {
+        font-size: 3rem;
+    }
+
+    footer h4 {
+        margin-top: 30px;
+    }
+
+    header {
+        padding: 15px 5px;
+    }
+
+    .product_card {
+        width: 200px;
+    }
+
+    #contact div {
+        padding: 0 10px;
+    }
+
+    #contact div p {
+        flex-wrap: wrap;
+    }
+
+    footer div:first-of-type img {
+        height: 80px;
+    }
+}
+
+@media screen and (max-width: 610px) {
+    #industries .carousel-container {
+        max-width: 400px;
+        position: relative;
+        padding: 20px;
+    }
+
+    /* Navigation Buttons */
+    #industries .swiper-button-next,
+    #industries .swiper-button-prev {
+        margin-top: 85px;
+        --swiper-navigation-sides-offset: 50px;
+    }
+
+    #industries .slide-image img {
+        width: 400px;
+        height: 400px;
+    }
+
+    .product_card {
+        margin-right: 0;
+    }
+
+    #heroSquareOne img {
+        width: 100%;
+    }
+
+    #heroTextOne {
+        left: 0px;
+        max-width: 90%;
+        padding: 0 20px;
+    }
+
+    #heroTextOne h4 {
+        font-size: 2.5rem;
+    }
+
+    #heroTextOne h2 {
+        font-size: 1.5rem;
+    }
+}
+
+/* burger styling  */
+nav .burger {
+    position: relative;
+    width: 28px;
+    height: 21px;
+    background: transparent;
+    cursor: pointer;
+}
+
+nav .burger input {
+    display: none;
+}
+
+nav .burger span {
+    display: block;
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    background: black;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: .25s ease-in-out;
+}
+
+nav .burger span:nth-of-type(1) {
+    top: 0px;
+    transform-origin: left center;
+}
+
+nav .burger span:nth-of-type(2) {
+    top: 50%;
+    transform: translateY(-50%);
+    transform-origin: left center;
+}
+
+nav .burger span:nth-of-type(3) {
+    top: 100%;
+    transform-origin: left center;
+    transform: translateY(-100%);
+}
+
+nav .burger input:checked~span:nth-of-type(1) {
+    transform: rotate(45deg);
+    top: 0px;
+    left: 3.5px;
+}
+
+nav .burger input:checked~span:nth-of-type(2) {
+    width: 0%;
+    opacity: 0;
+}
+
+nav .burger input:checked~span:nth-of-type(3) {
+    transform: rotate(-45deg);
+    top: 19.6px;
+    left: 3.5px;
+}
+
+.burger:has(#burger:checked) ~ ul.options {
+    transform: translateX(0);
 }
