--- a/public/product-page-styles.css
+++ b/public/product-page-styles.css
@@ -27,16 +27,16 @@
 }
 
 .hero-content {
-  width: 50%;
-  min-width: 600px;
-  max-width: 800px;
+  width: 60%;
+  min-width: 500px;
+  max-width: 700px;
   z-index: 2;
 }
 
 .hero-content h1 {
   font-family: 'Livvic', sans-serif;
-  font-size: 3.3rem;
-  font-weight: 900;
+  font-size: 2.7rem;
+  font-weight: 700;
   text-transform: uppercase;
   line-height: 1.2;
   margin: 0;
@@ -111,13 +111,21 @@
 }
 
 .call-btn {
-  background-color: #DA1212;
-  color: #fff;
-  /* border: 2px solid #DA1212; */
+  background-color: #fff;
+  color: #DA1212;
+  border: 2.2px solid #DA1212;
 }
 
 .hero-image-port {
   width: 300px;
+  border-radius: 10px;
+  object-fit: cover;
+  z-index: 2;
+}
+
+.hero-image-sp {
+  width: 400px;
+  height: 300px;
   border-radius: 10px;
   object-fit: cover;
   z-index: 2;
@@ -132,13 +140,22 @@
 
 /* ________________________________Product Page Products Section Styling________________________ */
 
+.floating-h2 {
+  font-size: 1.8rem;
+  margin: 30px 100px;
+  font-family: 'Livvic', sans-serif;
+  text-decoration: underline;
+  text-decoration-color: #DA1212;
+  color: #0A0D57;
+}
+
 .product-page-products {
   padding: 40px 100px;
 }
 
 .product-page-products h2 {
   font-size: 1.8rem;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
   color: var(--color-primary);
   font-weight: 700;
   /* text-transform: uppercase; */
@@ -152,13 +169,13 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   margin: 0;
   font-family: 'Livvic', sans-serif;
   color: #111;
   background: #fff;
   line-height: 1.35;
-}
+} */
 
 .container {
   max-width: 1100px;
@@ -248,6 +265,44 @@ body {
   border-radius: 999px;
   line-height: 1;
 }
+
+.product-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease, padding 0.3s ease;
+  padding-top: 0;
+  padding-bottom: 0;
+  border-bottom: 2px solid #bdbdbd;
+}
+
+.product-page-products.active .product-content {
+  max-height: 2000px; /* large enough to fit the tallest section */
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.product-page-products h3 {
+  cursor: pointer;
+  user-select: none;
+  position: relative;
+  font-size: 1.1rem;
+  padding-bottom: 20px;
+  padding-right: 20px;
+  font-weight: 700;
+}
+
+.product-page-products h3::after {
+  content: "+";
+  position: absolute;
+  right: 0;
+  font-weight: bold;
+  transition: transform 0.3s ease;
+}
+
+.product-page-products.active h3::after {
+  content: "-";
+}
+
 
 
 /* Modal styles */
@@ -420,7 +475,7 @@ body {
     text-align: center;
   }
 
-   .product-page-products h2 {
-    font-size: 1.8rem;
-   }
+  .floating-h2 {
+  margin: 30px 40px;
+}
 }
